--- a/no-cra-parcel/lab/index.html
+++ b/no-cra-parcel/lab/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="root"></div>
 
-    <section>
+    <!-- <section>
 		<div class="wrapper">
 			<div class="button">
 				<div class="icon">
@@ -59,7 +59,7 @@
 				<span>Github</span>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
     <script src="index.js"></script>
 </body>
